# src/main/java/FlyAway/aiAssitant/AiChatController.java
@@ -1,5 +1,6 @@
 package FlyAway.aiAssitant;
 
+import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -8,6 +9,7 @@ import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequestMapping("/api/v1/ai")
+@Tag(name = "AiChat")
 public class AiChatController {
     private final AiChatService chatService;
 
